syntax = "proto3";

package schema;

import "memprofiler.proto";

// HeapConsumptionRates is a collection of rate values for memory consumption indicators.
// Formally, the rate (or velocity) is the first time derivative of any memory consumption indicator.
// For Bytes rate units are bytes per second, for Objects rate units are units per second
message HeapConsumptionRates {
    double AllocObjects = 1;
    double AllocBytes = 2;
    double FreeObjects = 3;
    double FreeBytes = 4;
    double InUseObjects = 5;
    double InUseBytes = 6;
}

// LocationMetrics is a set of heap allocation statistics
// that happened in a particular place in code
message LocationMetrics {
    // Rates represents heap consumption rates estimated
    // for some averaging window defined by server
    HeapConsumptionRates Rates = 1;
    // Callstack describes location in code where the allocation occured
    Callstack Callstack = 2;
}

// SessionMetrics contains list of heap allocation metrics per every location
message SessionMetrics {
   repeated LocationMetrics Locations = 1;
}